--- a/index.html
+++ b/index.html
@@ -3,29 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MamaCircle</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Mama Circle</h1>
-    </header>
-
-    <section>
-        <h2>About Us</h2>
-        <p>This section contains information about the company.</p>
+    <section id="section1">
+        <header>
+            Welcome to MamaCircle 
+        </header>
     </section>
 
-    <section>
-        <h2>Services</h2>
-        <p>This section describes the services we offer.</p>
-    </section>
 
-    <section>
-        <h2>Contact</h2>
-        <p>This section contains contact information.</p>
+    <section id="section2" class="login-sign-up">
+        <button class="login-button">Login</button>
+        <button class="signup-button">SignUp</button>
     </section>
-
-    <footer>
-        <p>&copy; 2024 My Website</p>
-    </footer>
 </body>
-</html>
