--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         </header>
     </section>
 
+    <section id="sectionwelcome">
+        
+    </section>
 
-    <section id="section2" class="login-sign-up">
+
+    <section id="sectionloginsignup" class="login-sign-up">
         <button class="login-button">Login</button>
         <button class="signup-button">SignUp</button>
     </section>
