--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     </section>
 
     <section id="sectionwelcome">
-        
+        <!-- need to add some info here about the goals and purpose -->
     </section>
 
 
     <section id="sectionloginsignup" class="login-sign-up">
         <button class="login-button">Login</button>
-        <button class="signup-button">SignUp</button>
+        <button class="signup-button">Sign Up</button>
     </section>
+
+
 </body>
+
+
