--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Just the home landing page -->
     <section id="section1">
         <header>
-            Welcome
+            Welcome to MamaCircle 
         </header>
         <p>Hello world for now!</p>
     </section>
@@ -176,7 +176,7 @@
     <!-- Invite Section -->
     <section id="sectioninvite" style="display: none;">
         <div id="invite">
-            <h2>Has someone sent you an invite code to join their ?</h2>
+            <h2>Has someone sent you an invite code to join their MamaCircle?</h2>
             <button type="button" id="yes-button-code" data-role="yes">Yes, I have an invite code!</button>
             <button type="button" id="no-button-code" data-role="no">No</button>
         </div>
